# Bazel-iOS

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md
CleanApp/: Info.plist
CleanApp/Sources/: AppDelegate.swift  LoginViewController.swift
CleanAppTests/Sources/: LoginTests.swift
Common/Sources/: Sample.swift
Data/Sources/Repositories/: LoginRepositoryImpl.swift
Domain/Sources/Entities/: User.swift
Domain/Sources/UseCases/: LoginUseCase.swift
Presentation/Sources/Login/: LoginPresenter.swift
